; ModuleID = '/home/carl/AnghaBench/openssl/crypto/x509/extr_x509_vpm.c_X509_VERIFY_PARAM_get_count.c'
source_filename = "/home/carl/AnghaBench/openssl/crypto/x509/extr_x509_vpm.c_X509_VERIFY_PARAM_get_count.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@default_table = common dso_local global i32 0, align 4
@param_table = common dso_local global i64 0, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @X509_VERIFY_PARAM_get_count() #0 {
  %1 = alloca i32, align 4
  %2 = load i32, i32* @default_table, align 4
  %3 = call i32 @OSSL_NELEM(i32 %2)
  store i32 %3, i32* %1, align 4
  %4 = load i64, i64* @param_table, align 8
  %5 = icmp ne i64 %4, 0
  br i1 %5, label %6, label %13

6:                                                ; preds = %0
  %7 = load i64, i64* @param_table, align 8
  %8 = call i64 @sk_X509_VERIFY_PARAM_num(i64 %7)
  %9 = load i32, i32* %1, align 4
  %10 = sext i32 %9 to i64
  %11 = add nsw i64 %10, %8
  %12 = trunc i64 %11 to i32
  store i32 %12, i32* %1, align 4
  br label %13

13:                                               ; preds = %6, %0
  %14 = load i32, i32* %1, align 4
  ret i32 %14
}

declare dso_local i32 @OSSL_NELEM(i32) #1

declare dso_local i64 @sk_X509_VERIFY_PARAM_num(i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
